# HLX-English-Programming

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README-HLX.md  README.md  README_ARTIFACTS.md  SECURITY.md  SPEC.md  complete_test.nl  comprehensive_test.nl  debug_integration.py  direct_bytecode_test.py  docker-compose.yml  english_extension_test.py  english_extensions_test.py  english_vm_adapter.py  enhanced_test_runner.py  enhancedd_test.py  extension_adapter.py  integrated_compiler.py  integrated_extension_test.py  integrated_test.debug.nlc  integrated_test_runner.py  integration_test.nlc  pyproject.toml  requirements.txt  run_dev.sh  run_extension_test.py  run_integrated_test.py  simple_english_test.py  simple_extension_test.py  simple_test.nlc  test_code.json  test_english_extensions.py  (+4 more)
.ebextensions/: 00-docker-al2.config  python.config
docker/: edge.Dockerfile  frontend.Dockerfile  web.Dockerfile
docs/: CAPABILITIES.md  DEPLOYMENT.md  RELATED_WORK.md  RELEASE_NOTES.md  SPEC.md  WHITEPAPER.md  benchmarks.md  benchmarks_external.md  nlbc_spec.md  nlbc_spec_v1.md
english_programming/: README.md  api_example.nlc  basic_operations.nlc  combined_demo.nlc  english_programming.py  file_operations.nlc  run_english.py  simple_file_test.nlc  test_conditions.nlc
experiments/: aggregate_results.py  bench_hlx.py  validate_wot_td.py
natural_code_compiler/: generator.py  main.py  parser.py  tokenizer.py
nlvm_phase11_vscode_extension/: README.md  extension.js  language-configuration.json  (+1 more)
(+259 files in other folders)
